2012-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gscope.c: Added placeholder file, needed for distcheck.

	* configure.in: Added AM_PROC_CC_C_O, needed for upgrade of
	automake.

	* compile, config.guess, config.sub, install-sh, missing, depcomp,
	ylwrap, INSTALL.gnu, mkinstalldirs: Updated to automake 1.11.3,
	autoconf 2.68.

	* Makefile.in, aclocal.m4, src/Makefile.in, contrib/Makefile.in,
	doc/Makefile.in: Regenerated by automake 1.11.1.

	* configure, config.h.in: Regenerated by autoconf 2.68.

2012-06-15  Neil Horman  <nhorman@tuxdriver.com>
	* configure.in: Update version in configure.in in prep for new release

2012-06-15  Neil Horman  <nhorman@tuxdriver.com>
	* src/find.c: Add check to make sure that second '=' on assignment
	search isn't part of a digraph

2012-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (command): Allow usage of function keys ctrl-f and
	ctrl-b even from result pane.

	* src/display.c (display): More informative display of position in
	a multi-screenful result set.

2012-04-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/display.c (fields): Move "samuel" special function back to
	end of list, where it won't show on display.  Fix incorrect
	on-screen description of findassign function.

	* src/constants.h (NUMLEN): Increase from 5 to 10 to be able to
	handle source files with freaky large numbers of lines.
	(FIELDS): Reduce by one to avoid showing "samuel" special mode,
	which is quite unusable to the general public.

	* src/command.c (countrefs): There was still one scanf not taking
	into account limited buffer lengths.

	* src/find.c (check_for_assignment): Search for assignment failed
	to recognize >>= and <<=, incorrectly recognized ~=, and was
	implemented somewhat clumsily.

2012-03-12  Neil Horman	<nhorman@tuxdriver.com>

	* src/invlib.c: Modified posting construction code to properly limit
	the fileindex value to avoid overflow.
